--- a/java/res/xml/prefs_screen_preferences.xml
+++ b/java/res/xml/prefs_screen_preferences.xml
@@ -28,7 +28,7 @@
         android:key="pref_key_use_double_space_period"
         android:title="@string/use_double_space_period"
         android:summary="@string/use_double_space_period_summary"
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:persistent="true" />
     <CheckBoxPreference
         android:key="vibrate_on"
